Minor change to docstring

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -420,8 +420,7 @@
     "    - holiday     (int)   : Whether the day is a holiday or not\n",
     "    - weekday     (int)   : Day of the week\n",
     "    - workingday  (int)   : 1 if the day is neither a weekend nor holiday, otherwise 0\n",
-    "    - weathersit  (int)   : Weather situation \n",
-    "                            1: clear, 2: mist/cloudy, 3: light snow/rain, 4: heavy rain/snow/fog)\n",
+    "    - weathersit  (int)   : Weather conditions (1: clear, 2: mist/cloudy, 3: light snow/rain, 4: heavy rain/snow/fog)\n",
     "    - temp        (float) : Normalized temperature in Celsius (values divided by 41)\n",
     "    - atemp       (float) : Normalized feeling temperature in Celsius (values divided by 50)\n",
     "    - hum         (float) : Normalized humidity (values divided by 100)\n",
